--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,20 +22,31 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0px;
 }
 
 main {
     max-width: 840px;
 }
 
-aside img {
-    width: 200px;
+main img {
+    width: 150px;
     height: auto;
 }
 
-p {
-    padding: 0;
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
 }
 
 footer {
