--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,18 +11,30 @@ body {
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display:  flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
+    display: block;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
 }
 
 h1 {
+    padding-bottom: 1rem;
     color: steelblue;
-    margin: 0.5% 0;
+    margin: 4.5% 0;
+    border-bottom: 1px solid; 
+}
+main {
+    grid-column: 2/3;
 }
 
 main img {
@@ -40,9 +52,9 @@ p {
     padding: 0;
 }
 
-main {
+/* main {
     max-width: 640px;
-}
+} */
 
 aside {
     width: 20rem;
@@ -53,6 +65,8 @@ aside {
     color: #333;*/
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -72,6 +86,11 @@ footer {
     text-align: center;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: auto;
+}
+
 /* Class Selectors */
 
 .box {
@@ -84,4 +103,10 @@ footer {
 
 .indent {
     padding-left: 2rem;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+    /*grid-template-columns: repeat(2, 1fr);*/
 }
