--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -59,6 +59,10 @@ header, footer{
     background-color: var(--accent2-color);
 }
 
+a:hover{
+    background-color: #696969;
+}
+
 body {
     font-family: var(--body-font);
 }
@@ -130,9 +134,7 @@ h1 {
     border: 3px solid var(--color1);
 }
 
-.hero article .text-content {
-    order: 1;
-}
+
 
 .hero article img {
     float: right;
@@ -178,7 +180,7 @@ footer p{
     color: var(--primary-color);
 }
 
-.grid {
+.grid{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
@@ -196,7 +198,7 @@ footer p{
 
 .adventures-grid img{
     width: 150px;
-    border: 3px solid;
+    border: 3px solid var(--color1);
     box-shadow: var(--shadow);
 }
 
@@ -361,4 +363,180 @@ button{
     margin-top: .7em;
     margin-left: .4em;
     transform: scale(1.5);
+}
+
+.banner img{
+    height: 900px;
+    object-fit: cover;
+    position: relative;
+}
+
+.banner h1{
+    
+    border: none;
+    color: var(--primary-color);
+    box-shadow: var(--shadow);
+    font-size: 2em;
+}
+
+.banner p{
+    position: absolute;
+    margin-top: -41em;
+    color: var(--accent1-color);
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.visit-trips a, .trips a{
+    background-color: var(--button-color);
+    padding: .7em 2em;
+    border-radius: 5px;
+    font-size: 1.1em;
+    box-shadow: var(--shadow);
+    border: 1px solid;
+    color: var(--color1);
+}
+
+.visit-trips a:hover, button:hover, .trips a:hover{
+    background-color: #ff8600;
+}
+
+.content{
+    display: grid;
+    position: absolute;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: -22em;
+    padding-bottom: 20em;
+}
+
+.content article{
+    position: relative;
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.content article img{
+    height: 13em;
+    width: 13em;
+    object-fit: cover;
+}
+
+.content span{
+    margin: 1em auto -.5em auto;
+    color: var(--primary-color);
+}
+
+.newsletter{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    position: relative;
+}
+
+.newsletter input{
+    width: 25em;
+}
+
+.newsletter fieldset{
+    padding: 2em;
+    margin-top: -.7em;
+}
+
+.newsletter img{
+    width: 15em;
+    height: 13em;
+    object-fit: cover;
+    margin-left: 2em;
+    box-shadow: var(--shadow);
+    border: 2px solid var(--color1);
+}
+
+.newsletter form{
+    height: 20em;
+}
+
+.newsletter label{
+   text-align: center;
+}
+
+.newsletter button{
+    width: 16.5em;
+    margin-left: 3.9em;
+}
+
+.newsletter span{
+    margin: 2em auto 2em 8em;
+    color: var(--primary-color);
+}
+
+.heading h1{
+    font-size: 2em;
+}
+
+.heading p{
+    margin: 5em auto 5em auto;
+    padding: 2em;
+    font-size: 1.2em;
+    font-weight: bold;
+    height: 1em;
+    text-align: center;
+    color: var(--primary-color);
+}
+.trips{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.trips img{
+    width: 15em;
+    height: 10em;
+    object-fit: cover;
+    box-shadow: var(--shadow);
+    border: 2px solid var(--color1);
+}
+
+.row1{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.trips figure{
+    border: 2px solid var(--color1);
+    padding: 2em 1em;
+    margin-bottom: 1em;
+    box-shadow: var(--shadow);
+}
+
+.trips figcaption{
+    margin-top: -2em;
+}
+
+.trips-table{
+    width: 100%;
+    color: var(--primary-color);
+    border-collapse: collapse;
+    margin: 20px 0;
+    box-shadow: var(--shadow);
+    color: #d3d3d3;
+}
+.trips-table th, .trips-table td {
+    border: 1px solid var(--accent1-color);
+    padding: 10px 15px;
+    text-align: left;
+}
+.trips-table th{
+    background-color: var(--color1);
+    color:var(--button-color);
+    text-align: center;
+}
+
+.trips-table caption{
+    caption-side: top;
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-bottom: 10px;
 }
